syntax = "proto3";

package pb;

// The Repoctl service definition.
service Repoctl {
    rpc NewSite (NewSiteRequest) returns (NewSiteReply) {}
    rpc DeleteSite (DeleteSiteRequest) returns (DeleteSiteReply) {}
    rpc WritePost (WritePostRequest) returns (WritePostReply) {}
    rpc RemovePost (RemovePostRequest) returns (RemovePostReply) {}
    rpc ReadPost (ReadPostRequest) returns (ReadPostReply) {}
}

message NewSiteRequest {
    string email = 1;
    string sitename = 2;
}

message NewSiteReply {
    string err = 1;
}

message DeleteSiteRequest {
    string email = 1;
    string sitename = 2;
}

message DeleteSiteReply {
    string err = 1;
}

message WritePostRequest {
    string author = 1;
    string sitename = 2;
    string filename = 3;
    string content = 4;
}

message WritePostReply {
    string err = 1;
}

message RemovePostRequest {
    string author = 1;
    string sitename = 2;
    string filename = 3;
}

message RemovePostReply {
    string err = 1;
}

message ReadPostRequest {
    string author = 1;
    string sitename = 2;
    string filename = 3;
}

message ReadPostReply {
    string content = 1;
    string err = 2;
}

